--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,5 +2,5 @@
     "version": "0.1.0",
     "command": "node-sass",
     "isShellCommand": true,
-    "args": ["style.scss", "style.css"]
+    "args": ["css/style.scss", "css/style.css"]
 }
